--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde eligendi deleniti corporis nemo numquam illum dolorem sed magnam repellat laboriosam consequatur asperiores accusantium omnis sunt eaque suscipit, accusamus tenetur explicabo nostrum dolore?</p>
-    <p>This is a feature 1</p>
+    <p>This is a feature 1 (button)</p>
 </body>
 </html>
